samples/_failures_safe/1761252606_dd94e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c678658.c: In function ‘prim’:
./samples/SAFE/__tmp_0c678658.c:169:5: error: expected identifier at end of input
  169 |     int* key = malloc(graph->
      |     ^~~
./samples/SAFE/__tmp_0c678658.c:169:5: error: expected declaration or statement at end of input
